--- a/index.html
+++ b/index.html
@@ -92,6 +92,7 @@
 
           <div class="btns">
             <a href="#menu" class="btn-menu animated fadeInUp scrollto">Our Menu</a>
+            <a href="https://www.beyondmenu.com/23990/patterson/thai-elephant-2-patterson-12563.aspx" class="btn-menu animated fadeInUp scrollto">Order Takeout</a>
             <!-- <a href="#book-a-table" class="btn-book animated fadeInUp scrollto">Book a Table</a> -->
           </div>
         </div>
@@ -146,7 +147,6 @@
 
     <!-- ======= Menu Section ======= -->
     <section id="menu" class="menu">
-
       <div class="container" data-aos="fade-up">
         <div class="section-title">
           <h2>Menu</h2>
