--- a/index.html
+++ b/index.html
@@ -95,6 +95,7 @@
             <a href="https://www.beyondmenu.com/23990/patterson/thai-elephant-2-patterson-12563.aspx" class="btn-menu animated fadeInUp scrollto">Order Takeout</a>
             <!-- <a href="#book-a-table" class="btn-book animated fadeInUp scrollto">Book a Table</a> -->
           </div>
+          <h12>Note: Online takeout prep time may not be accurate.</h12>
         </div>
         <!-- <div class="col-lg-4 d-flex align-items-center justify-content-center position-relative" data-aos="zoom-in" data-aos-delay="200">
           <a href="https://www.youtube.com/watch?v=GlrxcuEDyF8" class="glightbox play-btn"></a>
