--- a/index.html
+++ b/index.html
@@ -89,6 +89,7 @@
         <div class="col-lg-8">
           <h1>Welcome to <span>Thai Elephant 2</span></h1>
           <h2>Serving authentic Thai food for over a decade!</h2>
+          <h2>We will be closed April 2<sup>nd</sup> to April 7<sup>th</sup></h2>
 
           <div class="btns">
             <a href="#menu" class="btn-menu animated fadeInUp scrollto">Our Menu</a>
