--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
         <div class="col-lg-8">
           <h1>Welcome to <span>Thai Elephant 2</span></h1>
           <h2>Serving authentic Thai food for over a decade!</h2>
-          <h2>We will be closed April 2<sup>nd</sup> to April 7<sup>th</sup></h2>
+          <h2 id="closure-notice">Loading</h2>
 
           <div class="btns">
             <a href="#menu" class="btn-menu animated fadeInUp scrollto">Our Menu</a>
@@ -369,6 +369,39 @@
 
   <!-- Template Main JS File -->
   <script src="/assets/js/main.js"></script>
+
+  <script type="module">
+    // Import the functions you need from the SDKs you need
+    import { initializeApp } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-app.js";
+    import {
+      getFirestore,
+      getDocs,
+      collection,
+      getDoc,
+      doc,
+    } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-firestore.js";
+
+    const firebaseConfig = {
+      apiKey: "AIzaSyAmgVdvyurxbc3JpH0m3kQb-8hAh_nH5d0",
+      authDomain: "website-c9845.firebaseapp.com",
+      projectId: "website-c9845",
+      storageBucket: "website-c9845.appspot.com",
+      messagingSenderId: "875989298298",
+      appId: "1:875989298298:web:758763e44a5e66d494dfc3",
+      measurementId: "G-JJ2JDRNEP7"
+    };
+  
+    // Initialize Firebase
+    const app = initializeApp(firebaseConfig);
+    const db = getFirestore(app);
+
+    // Fetch the closure notice from Firestore
+    const message = await getDoc(
+      doc(db, "messages", "welcome")
+    );
+    document.getElementById("closure-notice").innerHTML = message.data().message;
+
+  </script>
 
 </body>
 
